--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jotai": "^2.12.5",
+    "jotai-effect": "^2.0.5",
     "lucide-react": "^0.536.0",
+    "radash": "^12.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
